# appliedchemlabwork-tayra

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: upload.yaml
LICENSES/: cycler.md  hatch.txt  pandas.txt  polars.txt
docs/: .buildinfo  .buildinfo.bak  appliedchemlabwork_tayra.A3.html  appliedchemlabwork_tayra.B1.html  appliedchemlabwork_tayra.D1.html  appliedchemlabwork_tayra.D2.html  appliedchemlabwork_tayra.D3.html  appliedchemlabwork_tayra.common.html  appliedchemlabwork_tayra.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: appliedchemlabwork_tayra.A3.doctree  appliedchemlabwork_tayra.B1.doctree  appliedchemlabwork_tayra.D1.doctree  appliedchemlabwork_tayra.D2.doctree  appliedchemlabwork_tayra.D3.doctree  appliedchemlabwork_tayra.common.doctree  appliedchemlabwork_tayra.doctree  environment.pickle  index.doctree  modules.doctree
docs/_modules/: index.html
docs/_sources/: appliedchemlabwork_tayra.D1.rst.txt  appliedchemlabwork_tayra.common.rst.txt  appliedchemlabwork_tayra.rst.txt  index.rst.txt
docs_src/source/: appliedchemlabwork_tayra.A3.rst  appliedchemlabwork_tayra.B1.rst  appliedchemlabwork_tayra.D2.rst  appliedchemlabwork_tayra.D3.rst  appliedchemlabwork_tayra.rst  conf.py  index.rst  modules.rst
gell_app_analysis-14/: README.dataset.txt  README.roboflow.txt  data.yaml
gell_app_analysis-14/test/labels/: 0307primer-2-copia-_jpg.rf.58fe961247270af39d504fec07899ebc.txt  04-09-colleto-remap-copia-_jpg.rf.59b78c4c7145e270046b9558b4ca2520.txt  09-05-irap-II-e-I2_jpg.rf.76578ff7319ef8ead0fb31bfcc7d6fd4.txt  10-ng-dna-1_jpg.rf.caec08104726edf8e96b52a838f20d25.txt  1111-2x3-pb-copia-_jpg.rf.06e48a25372faa6c6f062e34191ceaf6.txt  1111-p-8-copia-_jpg.rf.5fd19d3d9d95b0c3e238c1edbfaa4e3d.txt  12-09-transfor-copia-1-copia-_jpg.rf.955beee313714c084e92c062bc2d423f.txt  1507primer-8-30-dna-copia-_jpg.rf.33fbc8175b0cecb9a0340cee20139cce.txt  24072014-cinza-est-ssr_jpg.rf.1d521ec2fbe141fa621ab55e54e43491.txt  5-10-14_jpg.rf.a5e298328c8a13a52c561e7d053d918f.txt  Gel-ds-17-12-14-certo-copia-_jpg.rf.7c8fb74ec3e84f1305cd19935a53ba81.txt  PCR-IG03-copia-1-copia-_jpg.rf.334ade27c31df5d5b7407f0fb0ea3d8e.txt  adriana-2-17-07-copia-_jpg.rf.fd063200c8a99d1211a6a9dc41910587.txt  extracao-ds-23-02-15-3-copia-1-copia-1-copia-_jpg.rf.3b74e954e167c01bcc5218cac9dd7b0f.txt  extracao-fungos-camila-ligia-julio-jpeg_jpg.rf.97c81d2541c4e1db76503fc05b5062cf.txt  gel-pcr-cintia-21052015-copia-1-copia-_jpg.rf.b8c3e81db3f9b9b86c382d63da7c9c65.txt  gel-pcr-cintia-21052015_jpg.rf.ee5d6495d90c1fbca2fec1f86a68b8af.txt  gel-planta-e-solo-13-02-14-copia-_jpg.rf.644da4e0815055e61619a473f06a8309.txt  gel-planta-e-solo-13-02-14_jpg.rf.e3ca9515f19d1a024a05e294f45d6f29.txt  pcr-26-06-2015-copia-1-_jpg.rf.c4fbef68e4b60592d6bab86c51a5e576.txt  pcr-ITS1-ITS4-24-08-2017-copia-_jpg.rf.cb5e9946d3623f8b6454edb7e542909b.txt  pcr02-09-2_jpg.rf.85b93e689e2367979e13e604b5629b46.txt  pcr15-07-copia-1-copia-_jpg.rf.2527c498280f1756cece97d705464384.txt  seg-gel-purig-25-10-13_jpg.rf.e8e1845557769bf91bdec8abec5c4968.txt  teste-enzima-S1-2-copia-_jpg.rf.3d71e06dc766812b69641f6dcd14ac75.txt  teste-enzima-S1-2-copia-_jpg.rf.7b6f8bd390de0944d5afe226f64de4c0.txt  teste-primers-copia-_jpg.rf.88f5b275462366a1379d458a601ac968.txt  teste-primers-ok_jpg.rf.1f218170f273bf399966079b4857ba49.txt  transformante-02-09-_jpg.rf.074dd0252eba4c9881a9ed9a7ed0fba1.txt
gell_app_analysis-14/train/: labels.cache
gell_app_analysis-14/train/labels/: 0107pri-er-8-copia-_jpg.rf.529e769fb0c57a95600bf9dc5db7cb09.txt  0107primer-8-_jpg.rf.be423883e7d96fc6717aa20bf3a7a060.txt  0107primer-8-copia-_jpg.rf.517be78e32258fcee2f81d9e4edbc22c.txt  02-09-f3-f13-p345-copia-_jpg.rf.d081dd465d92343868d275b2b6ea4a34.txt  0209-2x3-copia-_jpg.rf.1bdc9c66ddc3a379ee7ec824b6d9de0f.txt  0209-2x3-pb-copia-_jpg.rf.b982a74258fdb899010b6a826072c8b6.txt  0209-2x3_jpg.rf.99f3e964f8d16272098f2e6131593ee5.txt  0307primer-2-copia-_jpg.rf.974c522f3588579b8a37f36b1605d775.txt  04-09-colle-remap-copia-1-copia-1-_jpg.rf.e230bafcc8e5082f396d7481b4ae64de.txt  04-09-colle-remap-copia-_jpg.rf.4c25c977d59918c1b7ecb13486a1dcbd.txt  04-09-colleto-remap_jpg.rf.130b43015076f22adb62891199aac9e2.txt  06-09-out-irap-copia-_jpg.rf.63665dc055170d7cf940e517c2a7fcbf.txt  06-09-out-irap_jpg.rf.0394bffcb8690cbcc5b7bed210b1b569.txt  06-09-outros-irap-copia-_jpg.rf.4ff2eb77009aa9906faa2905b6504b45.txt  06-09-outros-irap-copia-_jpg.rf.6ca4ee7d4ad24354c7f7e428f19002ae.txt  0706-ltr-ssr-1-REMAP_jpg.rf.f27af77040edb7e7e4e6c2d69767a51f.txt  070620-gel1-REMAP_jpg.rf.2534a860a76f5b1ba5d9475193829cea.txt  08-05-19-irap-II_jpg.rf.2b303276b3d20b02f8a6e994c78f29f0.txt  09-05-irap-II-e-I-copia-1-_jpg.rf.cfdeb43c9f31cae789f365654b3f953c.txt  09-05-irap-II-e-I-copia-_jpg.rf.a74434f4b48ed980911a9ce201fed212.txt  09062014154129-teste-cloreto_jpg.rf.b14827a344826ef5dad701104f773061.txt  09062014154315-teste-cloreto_jpg.rf.ad75aaa8c65128fb0013f736d9ec7e8a.txt  09062014154444-cloreto-copia-_jpg.rf.487b36afd2a6a5ef43a74e4a959a910a.txt  10-ng-3-copia-_jpg.rf.81473806b77a9c08bc954166c92d4953.txt  100-ng-2_jpg.rf.24be458e2f397adc3fb66e0f556a4fdc.txt  10ng-dna_jpg.rf.cdfcc60f3d7abd826010c54f22165a69.txt  11062primer-9-copia-_jpg.rf.b2853d6ca101b7f974c5850a87664fa7.txt  1106primer-9_jpg.rf.1bd1d8240e5399d2fb5a237062144912.txt  1107p8-pb-10-dna_jpg.rf.837fddd923d8576513dd6dd17ca733a7.txt  1107primer-8-10ng-DNA-copia-_jpg.rf.f69a78596b1b9959559a99d63627f34f.txt  1109-5x9-e-3x8-copia-_jpg.rf.31de4f377995cf55185c5a130ddc7882.txt  1109-5x9-e-3x8_jpg.rf.164b213ad033c4b0c2e309feecdc222c.txt  1111-2x3_jpg.rf.a63037a72d363762863b2335b8fdb3cc.txt  1111-8-pb_jpg.rf.6fa1345c3c3f7b5d938a44735f5a6c24.txt  1111-p8-copia-_jpg.rf.08cd2833c049b3e1a29c7af7ca60dee6.txt  11112x3-copia-_jpg.rf.a8a593615594c2f5670880f39cd29222.txt  (+134 more)
gell_app_analysis-14/valid/: labels.cache
results/: result-0.csv
src/appliedchemlabwork_tayra/: __about__.py
tests/: test_D2.py
trained-model/: args.yaml  results.csv
(+92 files in other folders)
