[build-system]
requires = ["hatchling>=1.31"]
build-backend = "hatchling.build"

[project]
name = "appliedchemlabwork-tayra"
dynamic = ["version"]
description = 'Python package for experiment analysis for Applied Chemistry Labolatory Work subject in Kyoto Institute of Technology.'
readme = "README.md"
requires-python = ">=3.14"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE.txt", "LICENSES/*.*"]
keywords = [
  "chemistry",
  "experiment",
  "analysis",
  "polymer",
  "electrophoresis",
  "yield",
  "molecule",
  "molecular weight",
  "plotting",
  "numpy",
  "scipy",
]
authors = [
  { name = "Tayra Sakurai", email = "tayra_sakurai@icloud.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Natural Language :: English",
  "Natural Language :: Japanese",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "numpy>=2.5.1",
  "pandas>=3.0.3",
  "scipy>=1.18",
  "PyQt6>=6.11",
  "PyQt6-Graphs>=6.11",
  "roboflow>=1.3.13",
  "ultralytics>=8.4.103",
  "polars>=1.43",
  "matplotlib>=3.11",
  "cycler>=0.12",
]

[project.urls]
Documentation = "https://tayra-sakurai.github.io/appliedchemlabwork-tayra"
Issues = "https://github.com/Tayra-Sakurai/appliedchemlabwork-tayra/issues"
Source = "https://github.com/Tayra-Sakurai/appliedchemlabwork-tayra"

[tool.hatch.version]
path = "src/appliedchemlabwork_tayra/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.dev]
dependencies = [
  "pydata-sphinx-theme>=0.19",
  "build>=1.5",
  "Sphinx>=9.1",
  "numpydoc>=1.10.0",
  "hatch>=1.13",
  "hatchling>=1.31",
  "scipy_stubs>=1.18",
  "Setuptools>=82.0.1",
  "pytest>=9.1.1",
  "twine>=6.2",
  "flake8>=7.3",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/appliedchemlabwork_tayra tests}"

[tool.coverage.run]
source_pkgs = ["appliedchemlabwork_tayra", "tests"]
branch = true
parallel = true
omit = [
  "src/appliedchemlabwork_tayra/__about__.py",
]

[tool.coverage.paths]
appliedchemlabwork_tayra = ["src/appliedchemlabwork_tayra", "*/appliedchemlabwork-tayra/src/appliedchemlabwork_tayra"]
tests = ["tests", "*/appliedchemlabwork-tayra/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
